--- a/index.html
+++ b/index.html
@@ -5,25 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElonX - AI Crypto Investment</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            padding: 0;
-            background: url('https://source.unsplash.com/1600x900/?rocket,space') no-repeat center center fixed;
+            background: url('https://source.unsplash.com/1920x1080/?rocket,space') no-repeat center center fixed;
             background-size: cover;
             color: white;
         }
-        .container {
-            padding: 50px;
+        .overlay {
             background: rgba(0, 0, 0, 0.7);
-            border-radius: 10px;
-            display: inline-block;
-            margin-top: 50px;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        img {
-            max-width: 100%;
-            height: auto;
+        .container {
+            max-width: 800px;
+            padding: 50px;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            animation: fadeIn 1.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         .cta-button {
             display: inline-block;
@@ -32,24 +44,30 @@
             color: white;
             background-color: #ff4500;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             text-decoration: none;
-            margin-top: 20px;
+            transition: background 0.3s;
         }
         .cta-button:hover {
             background-color: #e63900;
         }
+        img {
+            max-width: 100px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to ElonX - The Future of AI-Driven Crypto Investments</h1>
-        <img src="/mnt/data/images.jpg" alt="AI Crypto Growth">
-        <p>
-            Secure your financial future with ELX, the cryptocurrency backed by cutting-edge AI technology. 
-            Our platform combines security, intelligence, and automation to skyrocket your portfolio to new heights. 
-        </p>
-        <a href="#whitepaper" class="cta-button">Download Whitepaper</a>
+    <div class="overlay">
+        <div class="container">
+            <h1>Welcome to ElonX - The Future of AI-Driven Crypto Investments</h1>
+            <img src="https://source.unsplash.com/100x100/?crypto,ai" alt="AI Crypto Growth">
+            <p>
+                Secure your financial future with ELX, the cryptocurrency backed by cutting-edge AI technology. 
+                Our platform combines security, intelligence, and automation to skyrocket your portfolio to new heights. 
+            </p>
+            <a href="#whitepaper" class="cta-button">Download Whitepaper</a>
+        </div>
     </div>
 </body>
 </html>
