--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             box-sizing: border-box;
         }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
-            background: url('https://source.unsplash.com/1920x1080/?rocket,space') no-repeat center center fixed;
+            background: url('https://source.unsplash.com/1920x1080/?galaxy,nebula,stars') no-repeat center center fixed;
             background-size: cover;
             color: white;
         }
         .overlay {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.6);
             width: 100%;
             height: 100vh;
             display: flex;
@@ -26,42 +26,60 @@
             align-items: center;
         }
         .container {
-            max-width: 800px;
-            padding: 50px;
-            background: rgba(0, 0, 0, 0.8);
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            max-width: 900px;
+            padding: 60px;
+            background: rgba(20, 20, 20, 0.9);
+            border-radius: 20px;
+            box-shadow: 0 0 20px rgba(255, 94, 0, 0.6);
             animation: fadeIn 1.5s ease-in-out;
         }
         @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        h1 {
+            font-size: 2.5rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+        }
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
         .cta-button {
             display: inline-block;
-            padding: 15px 30px;
+            padding: 15px 40px;
             font-size: 20px;
+            font-weight: bold;
             color: white;
-            background-color: #ff4500;
+            background: linear-gradient(90deg, #ff4500, #ff9000);
             border: none;
-            border-radius: 8px;
+            border-radius: 10px;
             text-decoration: none;
-            transition: background 0.3s;
+            box-shadow: 0 0 15px rgba(255, 94, 0, 0.8);
+            transition: all 0.3s ease-in-out;
         }
         .cta-button:hover {
-            background-color: #e63900;
+            background: linear-gradient(90deg, #ff9000, #ff4500);
+            transform: scale(1.05);
+            box-shadow: 0 0 25px rgba(255, 94, 0, 1);
         }
         img {
-            max-width: 100px;
+            max-width: 120px;
             margin-top: 20px;
+            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.6));
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="overlay">
         <div class="container">
             <h1>Welcome to ElonX - The Future of AI-Driven Crypto Investments</h1>
-            <img src="https://source.unsplash.com/100x100/?crypto,ai" alt="AI Crypto Growth">
+            <img src="https://source.unsplash.com/120x120/?crypto,technology" alt="AI Crypto Growth">
             <p>
                 Secure your financial future with ELX, the cryptocurrency backed by cutting-edge AI technology. 
                 Our platform combines security, intelligence, and automation to skyrocket your portfolio to new heights. 
