--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         body {
             font-family: 'Poppins', sans-serif;
             text-align: center;
-            background: url('https://source.unsplash.com/1920x1080/?stars,space,universe') no-repeat center center fixed;
+            background: url('https://source.unsplash.com/1920x1080/?galaxy,nebula,stars') no-repeat center center fixed;
             background-size: cover;
             color: white;
+            overflow-x: hidden;
         }
         .overlay {
             background: rgba(0, 0, 0, 0.7);
@@ -25,66 +26,78 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            animation: fadeIn 2s ease-in-out;
         }
         .container {
-            max-width: 900px;
+            max-width: 1000px;
             padding: 60px;
             background: rgba(20, 20, 20, 0.9);
             border-radius: 20px;
-            box-shadow: 0 0 20px rgba(255, 94, 0, 0.6);
-            animation: fadeIn 1.5s ease-in-out;
+            box-shadow: 0 0 30px rgba(255, 94, 0, 0.8);
+            text-align: center;
+            animation: scaleUp 1.5s ease-in-out;
         }
         @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
-            to { opacity: 1; transform: scale(1); }
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes scaleUp {
+            from { transform: scale(0.9); }
+            to { transform: scale(1); }
         }
         h1 {
-            font-size: 2.8rem;
+            font-size: 3rem;
             text-transform: uppercase;
             letter-spacing: 2px;
             margin-bottom: 20px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+            text-shadow: 0 0 20px rgba(255, 255, 255, 1);
         }
         p {
-            font-size: 1.3rem;
-            line-height: 1.6;
+            font-size: 1.4rem;
+            line-height: 1.8;
             margin-bottom: 20px;
         }
         .cta-button {
             display: inline-block;
             padding: 15px 40px;
-            font-size: 20px;
+            font-size: 22px;
             font-weight: bold;
             color: white;
             background: linear-gradient(90deg, #ff4500, #ff9000);
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             text-decoration: none;
-            box-shadow: 0 0 15px rgba(255, 94, 0, 0.8);
+            box-shadow: 0 0 20px rgba(255, 94, 0, 1);
             transition: all 0.3s ease-in-out;
         }
         .cta-button:hover {
             background: linear-gradient(90deg, #ff9000, #ff4500);
-            transform: scale(1.05);
-            box-shadow: 0 0 25px rgba(255, 94, 0, 1);
+            transform: scale(1.1);
+            box-shadow: 0 0 30px rgba(255, 94, 0, 1);
         }
-        img {
-            max-width: 120px;
-            margin-top: 20px;
-            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.6));
+        .animated-image {
+            max-width: 200px;
+            margin-top: 30px;
+            filter: drop-shadow(0 0 15px rgba(255, 255, 255, 0.8));
+            animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
         }
         .links {
-            margin-top: 30px;
+            margin-top: 40px;
         }
         .links a {
             color: #ff9000;
-            font-size: 1.2rem;
-            margin: 0 15px;
+            font-size: 1.4rem;
+            margin: 0 20px;
             text-decoration: none;
-            transition: color 0.3s;
+            transition: color 0.3s, transform 0.3s;
         }
         .links a:hover {
             color: #ff4500;
+            transform: scale(1.1);
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -93,7 +106,7 @@
     <div class="overlay">
         <div class="container">
             <h1>Welcome to ElonX - The Future of AI-Driven Crypto Investments</h1>
-            <img src="https://source.unsplash.com/120x120/?crypto,technology" alt="AI Crypto Growth">
+            <img src="/mnt/data/images.jpg" class="animated-image" alt="AI Crypto Growth">
             <p>
                 Secure your financial future with ELX, the cryptocurrency backed by cutting-edge AI technology. 
                 Our platform combines security, intelligence, and automation to skyrocket your portfolio to new heights. 
