--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="overlay">
         <div class="container">
             <h1>Welcome to ElonX - The Future of AI-Driven Crypto Investments</h1>
-            <img src="/mnt/data/images.jpg" class="animated-image" alt="AI Crypto Growth">
+            <img src="images.jpg" class="animated-image" alt="AI Crypto Growth">
             <p>
                 Secure your financial future with ELX, the cryptocurrency backed by cutting-edge AI technology. 
                 Our platform combines security, intelligence, and automation to skyrocket your portfolio to new heights. 
